--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,14 @@
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 
 name: A workflow for my Hello World file
 on: push
+
+jobs:
+  build:
+    name: Hello World action
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: ./action-a
+        with:
+          MY_NAME: Hamlet
