--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 
 name: A workflow for my Hello World file
-on: push
+on:
+  push:
+    branches: [main]
 
 jobs:
   build:
